apps/thumbnail-generator/overlays/aws/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thumbnail-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: thumbnail.dev.aws.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thumbnail-api
                port:
                  number: 80
